--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
 
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+      "test": "react-scripts test",
     "eject": "react-scripts eject"
+    
   },
 
   "eslintConfig": {
