--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-resizable-panels": "^4.3.1",
-    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "vite",
+  "build": "tsc && vite build",
+  "preview": "vite preview"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -41,8 +39,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
-    "autoprefixer": "^10.4.22"
+    "tailwindcss": "^3.4.1",
+    "typescript": "4.9.5"
   }
 }
