--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-  "start": "vite",
-  "build": "tsc && vite build",
-  "preview": "vite preview"
-},
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -39,9 +39,11 @@
     ]
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "vite": "^7.3.1"
   }
 }
