Final polish: Fix imports, optimize Home pagination, enhance Admin settings, and refine Mobile modal layout

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SUPABASE_URL=https://waeplmbwcphcrxaykfak.supabase.co
-REACT_APP_SUPABASE_ANON_KEY=sb_publishable_RBCU2YXmFUBgvWO-XN0q7Q_4PL1DCqr
+VITE_SUPABASE_URL=https://dgdjjyxjnpzqqofdqxdp.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_cjsjwayzjMDQLS98ra5gtA_H0jqjXbg
