--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-VITE_BLINK_PROJECT_ID='big-bazar-sheet-wwohjrwx'
-VITE_BLINK_PUBLISHABLE_KEY='blnk_pk_vxbvviG3FfQ895UPEFfovPgKjF5EGqSe'
+VITE_SUPABASE_URL=https://dgdjjyxjnpzqqofdqxdp.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_cjsjwayzjMDQLS98ra5gtA_H0jqjXbg
