fix: update wrangler.jsonc to use assets field

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,8 @@
 {
     "$schema": "node_modules/wrangler/config-schema.json",
     "name": "bigbazar-commerce",
-    "pages_build_output_dir": "dist",
+    "assets": {
+        "directory": "dist"
+    },
     "compatibility_date": "2024-01-01"
 }
