--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,8 +1,8 @@
 {
     "$schema": "node_modules/wrangler/config-schema.json",
-    "name": "bigbazar-commerce",
+    "name": "bigbazarbariarhat",
     "assets": {
         "directory": "dist"
     },
-    "compatibility_date": "2024-01-01"
+    "compatibility_date": "2026-01-20"
 }
